ci(.github/workflows): 增加deploy.yml
