# docs/swagger.json
@@ -62,7 +62,7 @@
                 }
             }
         },
-        "/api/v1/sys/roles": {
+        "/api/v1/sys/role": {
             "get": {
                 "description": "这是一段接口描述",
                 "produces": [
@@ -120,7 +120,7 @@
                 }
             }
         },
-        "/api/v1/sys/roles/:id": {
+        "/api/v1/sys/role/:id": {
             "put": {
                 "description": "这是一段接口描述",
                 "produces": [
@@ -156,6 +156,19 @@
                         }
                     }
                 }
+            }
+        },
+        "/api/v1/sys/roles": {
+            "get": {
+                "description": "这是一段接口描述",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "部门管理"
+                ],
+                "summary": "获取部门",
+                "responses": {}
             }
         }
     }
